--- a/rules/BUILD
+++ b/rules/BUILD
@@ -20,7 +20,7 @@ go_test(
 
 filegroup(
     name = "pytest_deps",
-    visibility = ["PUBLIC"],
+    visibility = ["//rules/..."],
     srcs = [
         "pytest.py",
         # "//third_party/python:pytest",
@@ -33,5 +33,21 @@ filegroup(
         "//third_party/python:pkg_resources",
         "//third_party/python:importlib_metadata",
         "//third_party/python:zipp",
+    ],
+)
+
+filegroup(
+    name = "behave_deps",
+    visibility = ["//rules/..."],
+    srcs = [
+        "behave.py",
+        "//third_party/parse",
+        #"//third_party/parse.py", # this was the original
+        "//third_party/behave",
+        "//third_party/parse_type",
+        "//third_party/traceback2",
+        "//third_party/enum",
+        "//third_party/win_unicode_console",
+        "//third_party/colorama",
     ],
 )
