Commit these while I work on something else

--- a/.plzconfig
+++ b/.plzconfig
@@ -6,6 +6,8 @@ location = ./plz-out/please
 ; Other projects using Please wouldn't normally need to do anything like this.
 pextool = //tools/please_pex
 moduledir = third_party.python
+testrunner = pytest
+; testrunnerbootstrap =
 
 [gc]
 keep = //test/...
