--- a/test/python_rules/pytest/BUILD
+++ b/test/python_rules/pytest/BUILD
@@ -27,4 +27,27 @@ python_test(
 python_test(
     name = "test_pytest_unicode",
     srcs = ["test_pytest_unicode.py"],
+    deps = [
+        ":pytest_file",
+        "//third_party/python:pytest",
+        "//third_party/python:py",
+        "//third_party/python:pluggy",
+        "//third_party/python:attrs",
+        "//third_party/python:funcsigs",
+        "//third_party/python:more_itertools",
+        "//third_party/python:packaging",
+        "//third_party/python:pkg_resources",
+        "//third_party/python:importlib_metadata",
+        "//third_party/python:zipp",
+    ],
+)
+
+python_test(
+    name = "testytest",
+    srcs = ["quicktest.py"],
+)
+
+filegroup(
+    name = "pytest_file",
+    srcs = ["pytest.py"],
 )
